// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicRendering Results Bar renders 1`] = `
<div>
  <nav
    class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="tbar-nav tbar-nav-wrap"
      >
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            2 results for "Red"
          </div>
        </li>
        <li
          class="tbar-item tbar-item-expand"
        >
          <div
            class="tbar-section"
          >
            Filter
          </div>
        </li>
        <li
          class="tbar-item"
        >
          <div
            class="tbar-section"
          >
            Clear
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders 1`] = `
<div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    />
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar in active state 1`] = `
<div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-primary navbar-nowrap"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    />
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with groups 1`] = `
<div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          Element 1
        </li>
        <li
          class="nav-item"
        >
          Element 2
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          Element 3
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`BasicRendering renders a ManagementToolbar with only search 1`] = `
<div>
  <nav
    class="management-bar navbar navbar-expand-md management-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <div
        class="navbar-form navbar-form-autofit navbar-overlay navbar-overlay-sm-down"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <form
            role="search"
          />
        </div>
      </div>
    </div>
  </nav>
</div>
`;
